# dcc-mcp-maya

./: .gitignore  ACTION_PLAN.md  AGENTS.md  ANTHROPIC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURSOR.md  DOCKER_TESTING.md  GEMINI.md  HOTRELOAD.md  HOTRELOAD_CHANGES.md  MEMORY.md  OPENAI.md  README.md  README_TESTING.md  README_zh.md  _probe2.py  codecov.yml  coverage.json  install.md  justfile  llms-full.txt  llms.txt  maya_bootstrap.py  noxfile.py  pyproject.toml  release-please-config.json  requirements-dev.txt
.codebuddy/automations/dcc-mcp-maya-auto-improve/: memory.md
.codebuddy/automations/dcc-mcp-maya-clearup/: memory.md
.codebuddy/automations/dcc-mcp-maya-docs/: memory.md
.github/workflows/: ci.yml  docs.yml  e2e.yml  mr-test.yml  multi-instance-tests.yml  publish.yml  release.yml
docs/: index.md  package-lock.json  package.json  skill-audit.md
docs/.vitepress/: config.ts
docs/api/: actions.md  adapter.md  scene.md  server.md  snapshot.md
docs/development/: testing-strategy.md
docs/guide/: actions.md  advanced.md  contributing.md  getting-started.md  index.md  installation.md  local-mcp-debug.md  mcp-resources.md  mcp-tools.md  multi-instance.md  scene.md  shutdown-matrix.md  snapshot.md  standalone.md  strict-skill-only-regression.md
docs/source/: conf.py
docs/zh/: index.md
docs/zh/api/: actions.md  adapter.md  scene.md  server.md  snapshot.md
docs/zh/development/: testing-strategy.md
docs/zh/guide/: actions.md  advanced.md  contributing.md  getting-started.md  index.md  installation.md  local-mcp-debug.md  mcp-resources.md  mcp-tools.md  multi-instance.md  scene.md  shutdown-matrix.md  snapshot.md  standalone.md
examples/mcp/: README.md  cursor-maya-streamable-http.json
examples/skills/maya-mock-async/: SKILL.md
examples/workflows/: maya_bulk_rbd_fbx.md
maya/: README.md  userSetup.py
maya/actions/: __init__.py  mel.py  primitives.py  scene.py
maya/plugin/: dcc_mcp_maya.py  dcc_mcp_maya_plugin.py  maya_mcp.py
mcp_server/: __init__.py  run_server.py
nox_actions/: codetest.py  docs.py  lint.py  release.py  utils.py
packaging/: README-pipeline.txt  README.txt  assemble_mod.py  assemble_mod_local.py  install.bat  install.sh  uninstall.bat  uninstall.sh
skills/dcc-mcp-maya-setup/: SKILL.md
skills/dcc-mcp-maya-setup/scripts/: setup_dcc_mcp_maya.py
src/dcc_mcp_maya/: __init__.py  __version__.py  _affinity.py  _cmds_file_guard.py  _commandport.py  _dev_session.py  _env.py  _executor.py  _gateway_runtime.py  _identity.py  _log_hygiene.py  _main_thread_queue.py  _maya_commandport_hygiene.py  _maya_output.py  _project_tools.py  _pyexec.py  _readiness.py  _recovery_dialog.py  _registration.py  _resources.py  _safe_session.py  _semantic_index.py  _shutdown_safety.py  _sidecar.py  _skill_loader.py  _version_probe.py  adapter.py  api.py  capabilities.py  capability_manifest.py  client.py  context_snapshot.py  diagnostics.py  dispatcher.py  gateway_election.py  host.py  hotreload.py  maya_bootstrap.py  server.py  service.py
src/dcc_mcp_maya/actions/: __init__.py  animation.py  attributes.py  cameras.py  constraints.py  deformer_advanced.py  display.py  dynamics.py  expressions.py  lighting.py  materials.py  mel.py  mesh_ops.py  namespaces.py  node_attrs.py  node_graph.py  render.py  (+12 more)
tests/: __init__.py  _transport_support.py  conftest.py  test_actions.py  test_actions_animation.py  test_actions_constraints_nodegraph.py  test_actions_deformer_attrs.py  test_actions_display_sceneutils.py  test_actions_extended.py  test_actions_history_expr.py  test_actions_render.py  test_actions_rigging_anim.py  test_actions_round10.py  test_actions_round11.py  test_actions_round12.py  test_actions_round13.py  test_actions_round14.py  test_actions_round19.py  test_actions_scene_extra.py  test_actions_sets_refs_layers.py  test_adapter.py  test_affinity_http_roundtrip.py  test_affinity_routing.py  test_agent_instruction_files.py  test_api.py  test_assemble_mod.py  test_basic_imports.py  test_capability_manifest.py  test_check_doc_parity.py  test_cmds_file_guard.py  test_commandport.py  test_context_snapshot.py  test_diagnostics.py  test_dispatcher.py  test_dispatcher_async.py  test_dispatcher_cancellation.py  test_dispatcher_timeout_hint.py  test_docker_integration.py  test_dynamic_dispatch.py  test_e2e_maya_standalone.py  (+116 more)
tests/__pycache__/: test_maya_adapter.cpython-312-pytest-8.3.3.pyc.50252  test_maya_client.cpython-311-pytest-8.3.5.pyc.48848  test_maya_client.cpython-312-pytest-8.3.3.pyc.50252
tests/e2e/: __init__.py  conftest.py  test_animation_e2e.py  test_commandport_e2e.py  test_deformers_xform_e2e.py  test_display_annotation_e2e.py  test_gateway_failover_e2e.py  test_grooming_painteffects_e2e.py  test_material_e2e.py  test_maya_commandport_hygiene_e2e.py  test_scene_e2e.py  test_scripting_e2e.py
tests/e2e_standalone/: _support.py  test_maya_actions.py  test_maya_workflows.py  test_mcp_protocol.py  test_multi_instance.py  test_plugin_lifecycle.py  test_plugin_load_smoke.py  test_server_lifecycle.py
tests/fixtures/: __init__.py  conftest.py  docker_maya.py  instance_factory.py  maya_instances.py
tests/integration/: test_gateway_jobs.py
tests/scripts/: run_local_tests.sh
tools/: add_prompts.py  annotate_skill_affinity.py  batch_random_spheres_smoke.py  batch_spheres_to_test_fbx.py  check_doc_parity.py  doc_parity_allowlist.txt  fix_bad_imports.py  fix_batch_validate_imports.py  fix_broken_batch_migration.py  fix_inline_batch_imports_to_top.py  fix_missing_imports.py  generate_openmaya_index.py  lint_skill_affinity.py  lint_skills.py  live_smoke.py  maya-dev-build-link-core-win.ps1  maya-install-core-win.ps1  maya-link-win.ps1  maya-mcp-inline-spheres-fbx.ps1  maya-run-script-http-win.ps1  maya-sidecar-dual-http-test-win.ps1  maya-status-win.ps1  maya-unlink-win.ps1  migrate_batch_validate.py  migrate_listcomp_objexists.py  migrate_objexists.py  migrate_remaining_objexists.py  migrate_standard_objexists.py  migrate_to_core_skill_api.py  migrate_uv_ops.py  resolve_conflicts.py  strict_skill_only_regression.py  sync_tool_groups.py
(+602 files in other folders)
