[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-maya"
version = "0.3.6"
description = "Maya plugin for the DCC Model Context Protocol (MCP) ecosystem — embeds a Streamable HTTP MCP server directly inside Maya"
authors = [{ name = "Long Hao", email = "hal.long@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["maya", "mcp", "dcc", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    # 0.17.20+: registry write hardening plus the 0.17.19 adapter runtime
    # observation contracts and 0.17.16 gateway identity / sidecar diagnostics.
    # abi3 (cp38+) on 3.8+; separate cp37 wheels on Python 3.7 (Maya 2022).
    "dcc-mcp-core>=0.17.20,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0",
    "requests>=2.28.0",
    "dcc-mcp-server>=0.17.20",
    "ruff>=0.8.0",
    "hatchling",
    "build",
    "tomli; python_version < '3.11'",  # tomllib backport for Python < 3.11
    "pyyaml>=5.0",  # YAML parsing for SKILL.md test validation
]
sidecar = [
    "dcc-mcp-server>=0.17.20",
]

[project.urls]
Homepage = "https://github.com/loonghao/dcc-mcp-maya"
Repository = "https://github.com/loonghao/dcc-mcp-maya"
Issues = "https://github.com/loonghao/dcc-mcp-maya/issues"
Changelog = "https://github.com/loonghao/dcc-mcp-maya/releases"

[project.entry-points."dcc_mcp.adapters"]
maya = "dcc_mcp_maya:MayaMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_maya"]

# Version is managed by release-please — do not edit manually.
# release-please updates both pyproject.toml [project].version and __version__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not e2e and not packaging and not integration'"
markers = [
    "e2e: end-to-end tests that require a real Maya standalone interpreter (tahv/mayapy)",
    "packaging: tests for packaging/assemble_mod.py that require network access to PyPI",
    "integration: integration tests that require a running Maya instance (local mayapy or Docker)",
]

[tool.coverage.run]
source = ["dcc_mcp_maya"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dcc_mcp_maya"]
# Prefer module-level imports (stdlib → third-party → first-party). ``ruff format`` does not
# reorder imports; use ``ruff check --select I --fix`` when tightening import blocks.
